# spot-ros-wrapper

./: .gitignore  README.md  install_dependencies.sh  package.xml  requirements.txt
install_script/: install_dependencies.sh  requirements.txt
spot_ros_interface/: CMakeLists.txt  README.md  backup.txt  package.xml  setup.py
spot_ros_interface/scripts/: dummy_joint_state_pub.py  dummy_occupancy_grid_publisher.py  grid_utils.py  keyboard_teleop.py  service_caller.py  spot_ros_interface.py  spot_ros_interface_py.py  tf_remapper.py
spot_ros_interface/scripts/test/: dummy_joint_state_pub.py  stand_srv_caller.py
spot_ros_msgs/: CMakeLists.txt  package.xml
spot_ros_msgs/msg/: BehaviorFaultState.msg  EStopState.msg  FootState.msg  ImageCapture.msg  KinematicState.msg  PowerState.msg  RobotState.msg  SystemFault.msg  SystemFaultState.msg
spot_ros_srvs/: CMakeLists.txt  package.xml
spot_ros_srvs/srv/: Stand.srv  Trajectory.srv  Velocity.srv
spot_urdf/: CMakeLists.txt  package.xml  spot.urdf
spot_urdf/launch/: rviz_display.launch
spot_urdf/link_models/: fl.lleg.stl  fr.hip.stl  fr.lleg.stl  hl.lleg.stl  hl.uleg.stl
spot_urdf/rviz/: occupancy_grid_config.rviz
spot_urdf/urdf/: spot.urdf  spot.urdf.xacro
src/: listener.cpp  spot_ros_interface.cpp  talker.cpp
src/spot_ros_msgs/msg/: CommsState.msg  RobotState.msg  SystemFaultState.msg
src/spot_ros_srvs/: CMakeLists.txt
src/spot_urdf/launch/: rviz_display.launch
src/spot_urdf/link_models/: base.stl  fl.hip.stl  fl.uleg.stl  hl.hip.stl  hr.hip.stl  hr.uleg.stl
