<?xml version="1.0"?>
<package format="2">
  <name>spot_ros_interface</name>
  <version>0.0.0</version>
  <description>
    ROS wrapper for the Spot SDK (https://github.com/boston-dynamics/spot-sdk)
    that exposes some key capabilities via standard ROS messages
  </description>
  <maintainer email="t-oferro@microsoft.com">t-oferro</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>spot_ros_msgs</build_depend>
  <build_export_depend>spot_ros_msgs</build_export_depend>
  <exec_depend>spot_ros_msgs</exec_depend>
  
</package>
