<?xml version="1.0"?>
<package format="2">
  <name>spot_ros_msgs</name>
  <version>0.0.0</version>
  <description>The spot_ros_msgs package</description>
  <maintainer email="t-oferro@microsoft.com">t-oferro</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

</package>
